fix gap between multiple definition descriptions

--- a/src/scss/core/_dl.scss
+++ b/src/scss/core/_dl.scss
@@ -40,7 +40,7 @@ dl {
 
 		+ dd {
 			justify-self: end;
-			margin-top: 0;
+			margin-top: 0 !important;
 		}
 	}
 
